# python-workshop-tum-gs

./: .gitignore  README.md  pyproject.toml
tngpywo/: __init__.py
tngpywo/lessons_01/: __init__.py  lesson_gs_01_getting_started.py  lesson_gs_02_containers_slicing.py  lesson_gs_03_conditions_and_loops.py  lesson_gs_04_functions.py  lesson_gs_05_process_files.py  lesson_gs_06_regex.py  lesson_gs_07_exceptions.py  lesson_gs_08_pattern_matching.py
tngpywo/tests/: conftest.py  tools_for_testing.py
tngpywo/tests/lessons_01/: mock_open.py  test_lesson_gs_01_getting_started.py  test_lesson_gs_02_containers_slicing.py  test_lesson_gs_03_conditions-and-loops.py  test_lesson_gs_04_functions.py  test_lesson_gs_05_process_files.py  test_lesson_gs_06_regex.py  test_lesson_gs_07_exceptions.py  test_lesson_gs_08_pattern_matching.py
tngpywo/tests/lessons_01/data/: file_03.txt
tngpywo/tools/: __init__.py
